--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,16 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".view.activity.MainActivity">
 
     <Button
             android:id="@+id/btn_play_detail_activity"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    <Button
+            android:id="@+id/btn_song_list_activity"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
 </LinearLayout>
