--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".view.activity.MainActivity">
+    <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tl_activity_main"
+            android:layout_width="match_parent"
+            app:tabBackground="@android:color/transparent"
+            app:tabRippleColor="@android:color/transparent"
+            android:layout_height="49dp"
+            app:tabSelectedTextColor="@color/text_common_black"
+            app:tabIndicatorHeight="0dp"
+            android:background="@color/colorWhite">
+
+    </com.google.android.material.tabs.TabLayout>
+    <!--<androidx.viewpager.widget.ViewPager-->
+            <!--android:id="@+id/vp_activity_main"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
     <Button
             android:id="@+id/btn_play_detail_activity"
