--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/app_bar_layout"
+        android:layout_alignParentTop="true"
         app:elevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
