调整播放逻辑

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="text_common_black">#333333</color>
     <color name="activity_play_detail_background">#211505</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorGrey">#817c78</color>
 
 
 </resources>
