--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -6,7 +6,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar_common"/>
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_common"
+            android:layout_width="match_parent"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:layout_height="?attr/actionBarSize">
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:id="@+id/tv_toolbar_title"
+                    android:layout_marginStart="83dp"
+                    android:layout_width="250dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_marginTop="12dp"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="29sp"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/tv_toolbar_singer"
+                    android:layout_alignStart="@id/tv_toolbar_title"
+                    android:layout_below="@id/tv_toolbar_title"
+                    android:layout_width="250dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_marginTop="12dp"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="22sp"
+                    android:layout_height="match_parent"/>
+        </RelativeLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
             android:layout_above="@id/sb_play_detail"
