--- a/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
+++ b/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content">
 
     <TextView
-            android:text="正在加载"
+            android:text="正在加载1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </LinearLayout>
