--- a/app/src/main/res/layout/activity_list_detail.xml
+++ b/app/src/main/res/layout/activity_list_detail.xml
@@ -11,7 +11,6 @@
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/ab_list_detail"
             android:layout_width="match_parent"
-            android:fitsSystemWindows="true"
             android:layout_height="250dp">
 
 
@@ -19,31 +18,70 @@
                 android:id="@+id/ct_list_detail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:contentScrim="?attr/colorPrimary"
+                android:fitsSystemWindows="true"
+                app:contentScrim="@color/text_common_black"
+                android:background="@color/text_common_black"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="88dp"
+                    android:background="@drawable/scrim_top"
+                    app:layout_collapseMode="pin"/>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="88dp"
+                    android:layout_gravity="bottom"
+                    android:layout_alignBottom="@+id/image"
+                    android:background="@drawable/scrim_bottom"/>
+
             <RelativeLayout
                     app:layout_collapseMode="parallax"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                <ImageView
-                        android:id="@+id/iv_activity_list_detail_cover"
-                        android:layout_marginTop="100dp"
-                        android:scaleType="fitXY"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"/>
+
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/cv_cover"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="72dp"
+                        android:layout_marginBottom="31dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp">
+
+                    <ImageView
+                            android:id="@+id/iv_activity_list_detail_cover"
+                            android:scaleType="fitXY"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
+                </androidx.cardview.widget.CardView>
+
                 <TextView
                         android:id="@+id/tv_list_detail_title"
-                        android:layout_toEndOf="@id/iv_activity_list_detail_cover"
-                        android:layout_alignTop="@id/iv_activity_list_detail_cover"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                <TextView
-                        android:layout_below="@id/tv_list_detail_title"
-                        android:layout_toEndOf="@id/iv_activity_list_detail_cover"
-                        android:layout_marginTop="5dp"
+                        android:layout_alignTop="@id/cv_cover"
+                        android:layout_marginTop="6dp"
+                        android:textSize="18dp"
+                        android:layout_marginStart="18dp"
+                        android:layout_toEndOf="@id/cv_cover"
                         android:maxLines="2"
                         android:ellipsize="end"
+                        android:layout_marginEnd="16dp"
+                        android:textColor="@color/colorWhite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
                         android:id="@+id/tv_list_detail_description"
+                        android:layout_below="@id/tv_list_detail_title"
+                        android:layout_alignStart="@id/tv_list_detail_title"
+                        android:textColor="@color/colorGrey"
+                        android:layout_toEndOf="@id/cv_cover"
+                        android:layout_marginTop="43dp"
+                        android:layout_marginRight="15dp"
+                        android:maxLines="2"
+                        android:ellipsize="end"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
             </RelativeLayout>
@@ -54,13 +92,14 @@
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     android:layout_height="?attr/actionBarSize">
+
                 <TextView
                         android:id="@+id/tv_list_detail_title_toolbar"
                         android:layout_marginStart="12dp"
-                        android:layout_width="250dp"
+                        android:layout_width="207dp"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:layout_marginTop="12dp"
+                        android:gravity="center_vertical"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp"
                         android:layout_height="match_parent"/>
