--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
                     android:id="@+id/iv_search"
                     android:layout_toEndOf="@id/tl_activity_main"
                     android:src="@drawable/activity_main_search"
+                    android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </RelativeLayout>
