--- a/app/src/main/res/layout/recycle_item_activity_list_detail_common.xml
+++ b/app/src/main/res/layout/recycle_item_activity_list_detail_common.xml
@@ -2,12 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="wrap_content">
 
     <TextView
             android:id="@+id/tv_list_detail_number"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="5dp"
+            android:textColor="@color/colorGrey"
+            android:textSize="12dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -15,16 +18,25 @@
             android:id="@+id/tv_list_detail_title"
             android:layout_alignParentStart="true"
             android:layout_marginStart="50dp"
+            android:textSize="14dp"
+            android:layout_marginTop="13dp"
+            android:textColor="@color/text_common_black"
             android:layout_alignParentTop="true"
+            android:layout_toStartOf="@id/iv_list_detail_play"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <TextView
             android:layout_alignStart="@id/tv_list_detail_title"
             android:layout_below="@id/tv_list_detail_title"
+            android:textColor="@color/colorGrey"
             android:id="@+id/tv_list_detail_description"
             android:maxLines="1"
             android:ellipsize="end"
+            android:textSize="10dp"
+            android:layout_marginBottom="13dp"
             android:layout_toStartOf="@id/iv_list_detail_play"
             android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
@@ -34,6 +46,8 @@
             android:src="@drawable/activity_list_detail_play"
             android:id="@+id/iv_list_detail_play"
             android:layout_toStartOf="@id/iv_list_detail_info"
+            android:layout_marginEnd="20dp"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -41,7 +55,8 @@
             android:id="@+id/iv_list_detail_info"
             android:layout_alignParentEnd="true"
             android:src="@drawable/activity_list_detail_info"
-            android:layout_marginEnd="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
