--- a/app/src/main/res/layout/recycle_item_dialog_bottom_playing.xml
+++ b/app/src/main/res/layout/recycle_item_dialog_bottom_playing.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <ImageView
-            android:id="@+id/iv_dialog_bottom_playing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="51dp">
+
     <TextView
             android:id="@+id/tv_dialog_bottom_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    <TextView
-            android:id="@+id/tv_dialog_bottom_artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    <ImageView
-            android:id="@+id/iv_dialog_bottom_delete"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"
+            android:textColor="@color/text_common_black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-</LinearLayout>
+    <TextView
+            android:id="@+id/tv_dialog_bottom_artist"
+            android:textColor="@color/colorGrey"
+            android:textSize="10sp"
+            android:maxLines="1"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="95dp"
+            android:layout_toEndOf="@id/tv_dialog_bottom_title"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    <ImageView
+            android:id="@+id/iv_dialog_bottom_delete"
+            android:src="@drawable/dialog_bottom_song_list_remove_song"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+</RelativeLayout>
