--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,10 @@
     <color name="colorGrey">#817c78</color>
     <color name="imageview_common_grey_place_holder">#f5f5f5</color>
     <color name="activity_list_detail_background">#59302e</color>
+    <color name="dialog_bottom_song_list_view_divide">#f6f6f6</color>
+    <color name="activity_playing_seekbar">#8f8b8c</color>
+    <color name="activity_playing_seekbar_second">#585858</color>
+
 
     <color name="translucent_scrim_top">#26000000</color>
     <color name="translucent_scrim_top_center">#0C000000</color>
