--- a/app/src/main/res/layout/dialog_bottom_song_list.xml
+++ b/app/src/main/res/layout/dialog_bottom_song_list.xml
@@ -12,8 +12,9 @@
             android:layout_height="51dp">
 
         <ImageView
-                android:id="@+id/iv_loop"
+                android:id="@+id/iv_bottom_loop"
                 android:src="@drawable/dialog_bottom_song_list_loop"
+                android:clickable="true"
                 android:layout_marginStart="11dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
@@ -24,7 +25,7 @@
                 android:text="列表循环"
                 android:layout_marginStart="11dp"
                 android:textSize="15sp"
-                android:layout_toEndOf="@id/iv_loop"
+                android:layout_toEndOf="@id/iv_bottom_loop"
                 android:textColor="@color/text_common_black"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
