--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:background="@color/activity_song_list_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".view.activity.SongListActivity">
+    <include layout="@layout/toolbar_common"/>
 
 
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_activity_song_list"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
-    <include layout="@layout/toolbar_common"/>
 
-</RelativeLayout>
+</LinearLayout>
