--- a/app/src/main/res/layout/recycle_item_fragment_mv_rank.xml
+++ b/app/src/main/res/layout/recycle_item_fragment_mv_rank.xml
@@ -6,6 +6,7 @@
 
     <androidx.cardview.widget.CardView
             android:id="@+id/cd_cover"
+            android:layout_centerHorizontal="true"
             android:layout_width="334dp"
             android:layout_height="190dp">
 
