--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -71,6 +71,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:id="@+id/ll_collect"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="51dp">
