--- a/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
+++ b/app/src/main/res/layout/recycle_item_activity_mv_play_loading_more_footer.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/anim_image"
+            android:layout_toStartOf="@id/anim_text"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:padding="1dp"
+            android:src="@drawable/list_loading" />
 
     <TextView
-            android:text="正在加载1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/anim_text"
+            android:layout_centerHorizontal="true"
+
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="努力加载中..."
+            android:textColor="#000000"
+            android:textSize="14sp" />
+
+
+</RelativeLayout>
