--- a/app/src/main/res/layout/fragment_play_detail_image.xml
+++ b/app/src/main/res/layout/fragment_play_detail_image.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ImageView
-            android:id="@+id/iv_play_detail_image"
+    <com.rg.musiound.view.widget.TrangleView
+            android:id="@+id/trangle_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+    <ImageView
+            android:id="@+id/iv_play_detail_image"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop"
+            android:layout_width="267dp"
+            android:layout_height="267dp"/>
 
-</LinearLayout>
+</RelativeLayout>
