--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="activity_playing_seekbar">#8f8b8c</color>
     <color name="activity_playing_seekbar_second">#585858</color>
     <color name="text_common_black_l">#191919</color>
+    <color name="activity_splash_red_background">#dc2c1f</color>
 
 
     <color name="translucent_scrim_top">#26000000</color>
