--- a/app/src/main/res/drawable-xhdpi/toolbar_common_ic_back_white.xml
+++ b/app/src/main/res/drawable-xhdpi/toolbar_common_ic_back_white.xml
@@ -5,6 +5,6 @@
         android:viewportWidth="1024.0">
 
     <path
-            android:fillColor="#000000"
+            android:fillColor="#ffffff"
             android:pathData="M340,512l416.4,416.3 -36.2,36.2 -452.6,-452.6 452.6,-452.6 36.2,36.2z" />
 </vector>
