--- a/app/src/main/res/layout/recycle_item_dialog_bottom_common.xml
+++ b/app/src/main/res/layout/recycle_item_dialog_bottom_common.xml
@@ -9,6 +9,8 @@
             android:textSize="15sp"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="@color/text_common_black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -17,19 +19,20 @@
             android:textColor="@color/colorGrey"
             android:textSize="10sp"
             android:maxLines="1"
+            android:ellipsize="end"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="95dp"
             android:layout_toEndOf="@id/tv_dialog_bottom_title"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-    <ImageView
-            android:id="@+id/iv_dialog_bottom_delete"
-            android:src="@drawable/dialog_bottom_song_list_remove_song"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <!--<ImageView-->
+            <!--android:id="@+id/iv_dialog_bottom_delete"-->
+            <!--android:src="@drawable/dialog_bottom_song_list_remove_song"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_marginEnd="10dp"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"/>-->
 
 </RelativeLayout>
