--- a/app/src/main/res/layout/recycle_item_dialog_bottom_playing.xml
+++ b/app/src/main/res/layout/recycle_item_dialog_bottom_playing.xml
@@ -3,21 +3,33 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="51dp">
+    <ImageView
+            android:id="@+id/iv_playing"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/dialog_bottom_song_list_playing_red"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     <TextView
             android:id="@+id/tv_dialog_bottom_title"
             android:textSize="15sp"
+            android:layout_toEndOf="@id/iv_playing"
             android:layout_marginStart="10dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_centerVertical="true"
-            android:textColor="@color/text_common_black"
+            android:textColor="@color/fragment_discovery_red"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <TextView
             android:id="@+id/tv_dialog_bottom_artist"
-            android:textColor="@color/colorGrey"
+            android:textColor="@color/fragment_discovery_red"
             android:textSize="10sp"
             android:maxLines="1"
+            android:ellipsize="end"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="95dp"
             android:layout_toEndOf="@id/tv_dialog_bottom_title"
@@ -25,13 +37,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-    <ImageView
-            android:id="@+id/iv_dialog_bottom_delete"
-            android:src="@drawable/dialog_bottom_song_list_remove_song"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <!--<ImageView-->
+            <!--android:id="@+id/iv_dialog_bottom_delete"-->
+            <!--android:src="@drawable/dialog_bottom_song_list_remove_song"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_marginEnd="10dp"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"/>-->
 
 </RelativeLayout>
