--- a/app/src/main/res/layout/activity_main_tool_bar.xml
+++ b/app/src/main/res/layout/activity_main_tool_bar.xml
@@ -8,14 +8,14 @@
         android:layout_height="wrap_content">
 
     <ImageView
-            android:src="@drawable/activity_main_drawer_btn"
+            android:src="@drawable/activity_main_night_mode"
             android:layout_alignBottom="@id/tl_activity_main"
             android:layout_alignParentStart="true"
             android:layout_marginStart="13dp"
             android:layout_marginBottom="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView" />
+            android:id="@+id/iv_night_switch" />
 
 
     <com.google.android.material.tabs.TabLayout
